Add document title and styled paragraph elements

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first project</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <h1>My first project</h1>
     <p>This is my first project built in an IDE!</p>
-    <img src="assets/images/roche-9485693_1280.jpg " alt="namibia-5087365_1280"
+    <img src="assets/images/ci-logo.png" alt="Code Institute logo">
+
 </body>
 </html>
